ensure installer package is available

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Build sdist
         run:
+          pip install cython
           python setup.py sdist
 
       - uses: actions/upload-artifact@v3
