--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,16 +54,16 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Run tests
-        run: |
-          pip install -e .
-          python -m unittest discover
-
+    
       - name: Build sdist
         run: |
-          pip install setuptools cython
-          python setup.py sdist
+          pip install setuptools build
+          python -m build --sdist
+      
+      - name: Run tests
+        run: |
+          pip install .
+          python -m unittest discover
 
       - uses: actions/upload-artifact@v4
         with:
