--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python: ["cp38", "cp39", "cp310", "cp311", "cp312", "cp313", "cp314"]
+        python: ["cp38", "cp39", "cp310", "cp311", "cp312", "cp313"]
 
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +19,7 @@ jobs:
           submodules: true
       
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.16.5
+        uses: pypa/cibuildwheel@v2.32.2
         env:
           CIBW_BUILD: ${{ matrix.python }}-*
           CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux*"
