--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,12 +19,12 @@ jobs:
           submodules: true
       
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.23.2
+        uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: ${{ matrix.python }}-*
           CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux*"
           CIBW_TEST_COMMAND: "python -m unittest discover -s {project}"
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_MANYLINUX_X86_64_IMAGE: quay.io/pypa/manylinux2014_x86_64:latest
 
       - uses: actions/upload-artifact@v4
         with:
