--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,7 +6,33 @@ on:
     - cron: "37 3 3 * *"
 
 jobs:
+  default_tests:
+    name: test package
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ['ubuntu-latest',  'macos-latest', 'windows-latest']]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+    
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          submodules: true
+      
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      
+      - name: Build
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools build
+          pip install .
+          python -m unittest discover
+  
   build_wheels:
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -32,6 +58,7 @@ jobs:
           name: artifact-${{ matrix.os }}-${{ matrix.python }}
 
   build_sdist:
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
@@ -44,27 +71,10 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 coverage coveralls
-    
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    
       - name: Build sdist
         run: |
           pip install setuptools build
           python -m build --sdist
-      
-      - name: Run tests
-        run: |
-          pip install .
-          python -m unittest discover
 
       - uses: actions/upload-artifact@v4
         with:
