--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = '1.1.6'
 description = 'Package to load genes from GENCODE GTF files'
 readme = 'README.md'
 license = 'MIT'
-license-files = ['LICENSE.txt"]
+license-files = ['LICENSE.txt']
 requires-python = ">=3.8"
 authors = [
     {name = 'Jeremy McRae', email = 'jeremy.mcrae@gmail.com'}
