--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ name = 'gencodegenes'
 version = '1.1.6'
 description = 'Package to load genes from GENCODE GTF files'
 readme = 'README.md'
-license-files = ['LICENSE.txt']
 requires-python = ">=3.8"
 authors = [
     {name = 'Jeremy McRae', email = 'jeremy.mcrae@gmail.com'}
@@ -18,6 +17,7 @@ dependencies = [
 ]
 
 classifiers = [
+    "License :: OSI Approved :: MIT License",
     "Development Status :: 4 - Beta",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
 ]
