make sure coveralls is available

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -85,6 +85,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         run: |
+          pip install coveralls
           python -m coverage run --source=./gencodegenes -m unittest discover
           coveralls --service=github
 
