--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -86,6 +86,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         run: |
           pip install coveralls
+          pip install .
           python -m coverage run --source=./gencodegenes -m unittest discover
           coveralls --service=github
 
